# tinyrenderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.h  build-debug.sh  build.sh  compile.sh  debug.h  geometry.h  image.h  livelib.cpp  main.cpp  obj-model.h  opengl-helpers.h  render.h  run.sh  scenegraph.h  tgaimage.h  todos.md  types.h
shaders/: render.frag
